--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
     <button id="button" onclick="displayModal()">Abrir modal</button>
     <div id="miModal" class="modal">
       <div class="modalContent">
-        <span class="close" onclick="closeModal()"> &times; </span>
-        <p>Agregar Evento</p>
-        <div>Jueves 23 de Junio</div>
         <div>
-          <p>Título</p>
-          <input type="text" />
+          <span class="close" onclick="closeModal()"> &times; </span>
         </div>
-        <div>
-          <p>Descripción</p>
-          <input type="text" />
-        </div>
-        <div>
-          <p>Participantes</p>
-          <input type="text" />
-        </div>
+        <h3>Agregar Evento</h3>
+        <p>Fecha</p>
+        <form>
+          <label>Título</label><br />
+          <input type="text" /><br />
+          <label>Descripción</label><br />
+          <input type="text" /><br />
+          <label>Participantes</label><br />
+          <input type="text" /><br /><br />
+          <input type="submit" value="Guardar" />
+        </form>
       </div>
     </div>
     <div id="container">
@@ -62,7 +61,10 @@
         <div>15</div>
         <div>16</div>
         <div>17</div>
-        <div>18</div>
+        <div>
+          <div class="descripcion">Título</div>
+          18
+        </div>
         <div>19</div>
         <div>20</div>
         <div>21</div>
