--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
           <input type="text" /><br />
           <label>Participantes</label><br />
           <input type="text" /><br /><br />
-          <input type="submit" value="Guardar" class="modalForm modalButton" />
+          <div>
+            <input type="submit" value="Guardar" class="modalForm modalButton" />
+          </div>
         </form>
       </div>
     </div>
@@ -40,53 +42,55 @@
         <div>Domingo</div>
       </div>
       <div class="calendarContainer">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
       <div class="calendarContainer">
-        <div>8</div>
-        <div>9</div>
-        <div>10</div>
-        <div>11</div>
-        <div>12</div>
-        <div>13</div>
-        <div>14</div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
       <div class="calendarContainer">
-        <div>15</div>
-        <div>16</div>
-        <div>17</div>
+        <div></div>
+        <div></div>
+        <div></div>
         <div>
           <div class="descripcion">Título</div>
-          <div>18</div>
         </div>
-        <div>19</div>
-        <div>20</div>
-        <div>21</div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
       <div class="calendarContainer">
-        <div>22</div>
-        <div>23</div>
-        <div>24</div>
-        <div>25</div>
-        <div>26</div>
-        <div>27</div>
-        <div>28</div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
       <div class="calendarContainer">
-        <div>29</div>
-        <div>30</div>
+        <div></div>
+        <div></div>
         <div></div>
         <div></div>
         <div></div>
         <div></div>
         <div></div>
       </div>
+    </div>
+    <hr>
+    <div id="dynamicHTML">
     </div>
     <script type="application/javascript" src="assets/index.js"></script>
   </body>
