Días correspondientes al mes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <body>
     <button id="button" onclick="displayModal()">Abrir modal</button>
+    <select id="month"></select>
+    <button id="setMonthButton" onclick="changeMonth()">Cambiar mes</button>
     <div id="miModal" class="modal">
       <div class="modalContent">
         <div>
@@ -32,7 +34,7 @@
       <div>
         <h1 id="fecha">Junio 2020</h1>
       </div>
-      <div class="calendarContainerHeader">
+       <div class="calendarContainerHeader">
         <div>Lunes</div>
         <div>Martes</div>
         <div>Miércoles</div>
@@ -40,53 +42,6 @@
         <div>Viernes</div>
         <div>Sábado</div>
         <div>Domingo</div>
-      </div>
-      <div class="calendarContainer">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="calendarContainer">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="calendarContainer">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div>
-          <div class="descripcion">Título</div>
-        </div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="calendarContainer">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="calendarContainer">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
       </div>
     </div>
     <hr>
