Set days of last month

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
   <body>
     <button id="button" onclick="displayModal()">Abrir modal</button>
-    <select id="month"></select>
-    <button id="setMonthButton" onclick="changeMonth()">Cambiar mes</button>
+    <select id="month" onchange="changeMonth()"></select>
     <div id="miModal" class="modal">
       <div class="modalContent">
         <div>
