modificacion en el input y manejo de locastorage

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <hr>
     <div id="dynamicHTML">
     </div>
+    <script type="application/javascript" src="assets/helpers.js"></script>
     <script type="application/javascript" src="assets/index.js"></script>
   </body>
 </html>
